# xianyu-auto-reply

./: .coverage  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  IMPORT_VALIDATION_REPORT.md  Makefile  check_admin.py  eslint.config.js  final_migrate.py  migrate-keywords.ps1  migrate_ai.py  migrate_dashboard.py  migrate_delivery.py  migrate_items.py  migrate_items2.py  migrate_keywords.py  openid_cache.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  test.yml
.trae/documents/: code-maintainability-plan.md  code-reorganization-plan.md
.trae/rules/: 01-project-overview.md  02-architecture.md  03-code-standards.md  04-development-process.md  05-testing-standards.md  06-deployment-process.md  07-operations-specifications.md  08-security-policy.md  09-documentation-management.md  10-team-collaboration.md  appendix.md  project_rules.md
app/: __init__.py  base_delivery.py  secure_confirm_ultra.py  secure_freeshipping_ultra.py
app/api/: __init__.py  decorators.py  dependencies.py  exception_handlers.py  helpers.py  limiter.py  metrics.py  middleware.py  models.py
app/core/: __init__.py  ai_reply_engine.py  constants.py  container.py  cookie_manager.py  exceptions.py  rule_engine.py  xianyu_live.py
app/repositories/: __init__.py  base.py  card_helpers.py  card_repo.py  cookie_repo.py  item_repo.py  keyword_cache.py  keyword_constants.py  keyword_repo.py  migrations.py  transaction.py  user_repo.py
app/utils/: __init__.py  browser_config.py  crypto.py  encryption.py  image_uploader.py  image_utils.py  item_search.py  logging_config.py  order_detail_fetcher.py  qr_login.py  xianyu_searcher.py  xianyu_utils.py
configs/: .env.example  config.py
db_manager/: __init__.py  card_repo.py  cookie_repo.py  item_repo.py  keyword_cache.py  notification_repo.py
deploy/: Dockerfile  deploy-to-new-server.ps1  docker-compose-simple.yml  docker-compose-v3.yml  quick-deploy.sh
docs/: CONNECTION_OPTIMIZATION_REPORT.md  DEPLOY_README.md  INDEX.md  OPERATIONS_GUIDE.md  bt-panel-migration-guide.md  website-deployment-guide.md
docs/architecture/: domains.md  layers.md  overview.md
docs/deployment/: CI_CD_DEPLOYMENT_PLAN.md  DEPLOYMENT_COMPARISON.md  GITHUB_ACTIONS_SETUP.md  NEW_SERVER_DEPLOY.md  README.md
docs/guides/: deployment.md  development.md  operations.md
docs/reference/: api.md  config.md
docs/team/: conventions.md  culture.md  principles.md
reply_server/: __init__.py  dependencies.py  helpers.py  middleware.py  response.py
reply_server/routes/: admin.py  auth.py  cards.py  cookies.py  items.py  keywords.py  settings.py
reports/: critical_issues.txt  freshness.json
scripts/: Start.py  file_log_collector.py  fix_auth.py  migrate_api_keys.py  migrate_cookies.py
scripts/tools/: check_sessions.py  fix_notification_channels.py  update_test_imports.py
src/: XianyuAutoAsync.py  __init__.py  ai_reply_engine.py  cookie_manager.py  rule_engine.py
src/handlers/: image_handler.py
src/keyword_matcher/: __init__.py  automaton.py  fuzzy_handler.py  matcher.py  regex_handler.py  selector.py
src/rule_engine/: __init__.py  core.py  exceptions.py  operators.py
static/: data_management.html  index.html  item_search.html  log_management.html  login.html  user_management.html
static/css/: app.css  components.css  layout.css  pages.css  utilities.css  variables.css
static/js/: app.js
static/pages/: data_management.html  index.html  login.html  test-token.html  user_management.html
tests/: __init__.py  conftest.py  run_tests.py  setup.js  vitest.config.js
tests/ai/: __init__.py
tests/e2e/: E2E_TEST_REPORT.md  QR_LOGIN_TEST_REPORT.md  QR_LOGIN_VERIFICATION_REPORT.md  README.md  TEST_SUMMARY.md  WEBSOCKET_FIX_VERIFICATION.md  add-card-modal.spec.js  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  qr-login.spec.js  report-template.html  run-tests.bat  run-tests.sh
tests/frontend/: TEST_REPORT.md  package-lock.json  package.json  setup.js  vitest.config.js
tests/integration/: __init__.py  (+1 more)
tools/: qq_openid_listener.py
utils/: __init__.py  image_utils.py  item_search.py  order_detail_fetcher.py
(+144 files in other folders)
