[project]
name = "xianyu-auto-reply"
version = "2.0.0"
description = "闲鱼自动回复系统 - 支持多用户、多账号管理的智能回复平台"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["xianyu", "auto-reply", "automation", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "websockets>=10.0,<13.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.1",
    "PyExecJS>=1.5.1",
    "blackboxprotobuf>=1.0.1",
    "psutil>=5.9.0",
    "python-multipart>=0.0.6",
    "openai>=1.65.5",
    "Pillow>=10.0.0",
    "qrcode[pil]>=7.4.2",
    "playwright>=1.40.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",
    "slowapi>=0.1.9",
    "python-dateutil>=2.8.2",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "email-validator>=2.0.0",
    "pyahocorasick>=2.0.0",
    "rapidfuzz>=3.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "safety>=2.0.0",
]

[project.scripts]
xianyu-server = "scripts.Start:main"

[project.urls]
Homepage = "https://github.com/your-username/xianyu-auto-reply"
Documentation = "https://github.com/your-username/xianyu-auto-reply/tree/main/docs"
Repository = "https://github.com/your-username/xianyu-auto-reply"
Issues = "https://github.com/your-username/xianyu-auto-reply/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "utils*", "scripts*", "configs*"]
exclude = ["tests*", "static*", "deploy*", "docs*"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "node_modules",
    "tests/frontend",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "SIM108", # use ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["app", "utils", "scripts", "configs", "db_manager", "reply_server"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "node_modules/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "asyncio: mark test as async test",
    "unit: mark test as unit test",
    "integration: mark test as integration test",
    "e2e: mark test as end-to-end test",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app", "utils", "scripts"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
